[project]
name = "python-dev-lab"
version = "0.1.0"
description = "Testando poetry"
authors = [
    {name = "Marcos Silva",email = "marcossilva8428@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{ include = "lab", from = "src" }]

[tool.taskipy.tasks]
test = 'pytest -s -x --cov=lab --cov-report=term-missing -vv'

[tool.pytest.ini_options]
pythonpath = ['src']

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
